# picolibrary-microchip-megaavr

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
ci/: analyze  format
configuration/: CMakeLists.txt.analysis  CMakeLists.txt.release-atmega2560  CMakeLists.txt.release-atmega328p  CMakeLists.txt.testing-interactive-atmega2560-arduino-mega-2560  CMakeLists.txt.testing-interactive-atmega328p-adafruit-metro-mini  CMakeLists.txt.testing-interactive-atmega328p-arduino-uno
configuration/analysis/: CMakeLists.txt
configuration/release-atmega2560/: CMakeLists.txt
configuration/release-atmega328p/: CMakeLists.txt
configuration/testing-interactive-atmega2560-arduino-mega-2560/: CMakeLists.txt
configuration/testing-interactive-atmega328p-adafruit-metro-mini/: CMakeLists.txt
configuration/testing-interactive-atmega328p-arduino-uno/: CMakeLists.txt
docs/: asynchronous_serial.md  definitions.md  gpio.md  i2c.md  index.md  interactive_testing_utilities.md  interrupt.md  library_version.md  multiplexed_signals.md  peripheral.md  register.md  spi.md  test-interactive.md  usage.md
docs/test-interactive/picolibrary/asynchronous_serial/reliable_unbuffered_output_stream/: hello_world.md
documentation/: Doxyfile.in  mainpage.md
git/hooks/: install  pre-commit
include/picolibrary/: microchip.h
include/picolibrary/hardware/: interrupt_guard.h
include/picolibrary/hil/: rom.h
include/picolibrary/microchip/: avr.h  megaavr.h
include/picolibrary/microchip/avr/: megaavr.h
include/picolibrary/microchip/avr/megaavr/: asynchronous_serial.h  gpio.h  peripheral.h  register.h  version.h
include/picolibrary/microchip/megaavr/: asynchronous_serial.h  gpio.h  i2c.h  interrupt.h  multiplexed_signals.h  peripheral.h  register.h  spi.h  version.h
include/picolibrary/microchip/megaavr/multiplexed_signals/: atmega2560.h  atmega328p.h
include/picolibrary/microchip/megaavr/peripheral/: atmega2560.h  atmega328p.h  instance.h  port.h  spi.h  twi.h  usart.h
source/: CMakeLists.txt
source/picolibrary/: microchip.cc
source/picolibrary/microchip/: avr.cc  megaavr.cc
source/picolibrary/microchip/avr/: megaavr.cc
source/picolibrary/microchip/avr/megaavr/: asynchronous_serial.cc  gpio.cc  peripheral.cc  register.cc  version.cc.in
source/picolibrary/microchip/avr/megaavr/peripheral/: atmega2560.cc  atmega328p.cc  instance.cc  port.cc  usart.cc
source/picolibrary/microchip/megaavr/: asynchronous_serial.cc  gpio.cc  i2c.cc  interrupt.cc  multiplexed_signals.cc  peripheral.cc  register.cc  spi.cc  version.cc.in
source/picolibrary/microchip/megaavr/multiplexed_signals/: atmega2560.cc  atmega328p.cc
source/picolibrary/microchip/megaavr/multiplexed_signals/atmega2560/: spi.cc  twi.cc  usart.cc
source/picolibrary/microchip/megaavr/multiplexed_signals/atmega328p/: spi.cc  twi.cc  usart.cc
source/picolibrary/microchip/megaavr/peripheral/: atmega2560.cc  atmega328p.cc  instance.cc  port.cc  spi.cc  twi.cc  usart.cc
source/picolibrary/testing/interactive/microchip/: megaavr.cc
source/picolibrary/testing/interactive/microchip/megaavr/: fatal_error.cc  log.cc
test/: CMakeLists.txt
test/interactive/: CMakeLists.txt
test/interactive/picolibrary/: CMakeLists.txt
test/interactive/picolibrary/adafruit/: CMakeLists.txt
test/interactive/picolibrary/adafruit/pid781/driver/hello_world/: CMakeLists.txt  main.cc
test/interactive/picolibrary/asynchronous_serial/: CMakeLists.txt
test/interactive/picolibrary/asynchronous_serial/unbuffered_output_stream/hello_world/: CMakeLists.txt  main.cc
test/interactive/picolibrary/asynchronous_serial/unbuffered_output_stream/hello_world/microchip/: CMakeLists.txt
test/interactive/picolibrary/asynchronous_serial/unbuffered_output_stream/hello_world/microchip/avr/: CMakeLists.txt
test/interactive/picolibrary/asynchronous_serial/unbuffered_output_stream/hello_world/microchip/avr/megaavr/: CMakeLists.txt  main.cc
test/interactive/picolibrary/asynchronous_serial/unbuffered_output_stream/hello_world/microchip/megaavr/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/: CMakeLists.txt
test/interactive/picolibrary/microchip/mcp23008/open_drain_io_pin/toggle/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/mcp23008/push_pull_io_pin/toggle/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/mcp23s08/internally_pulled_up_input_pin/state/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/mcp3008/blocking_single_sample_converter/sample/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/mcp3008/sample/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr/gpio/internally_pulled_up_input_pin/state/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr/gpio/push_pull_io_pin/toggle/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr/i2c/controller/scan/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr/spi/controller/usart/: CMakeLists.txt
test/interactive/picolibrary/microchip/megaavr/spi/controller/usart/echo/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr/spi/fixed_configuration_controller-spi/echo/: CMakeLists.txt  main.cc
test/interactive/picolibrary/microchip/megaavr/spi/variable_configuration_controller-usart/echo/: CMakeLists.txt  main.cc
test/interactive/picolibrary/texas_instruments/: CMakeLists.txt
test/interactive/picolibrary/texas_instruments/tca9548a/driver/scan/: CMakeLists.txt  main.cc
test/interactive/picolibrary/wiznet/: CMakeLists.txt
test/interactive/picolibrary/wiznet/w5500/ip/network_stack/ping/: CMakeLists.txt  main.cc
test/interactive/picolibrary/wiznet/w5500/ip/tcp/client/echo/: CMakeLists.txt  main.cc
test/interactive/picolibrary/wiznet/w5500/ip/tcp/server/echo/: CMakeLists.txt  main.cc
test/interactive/picolibrary/wiznet/w5500/ip/udp/socket/echo/: CMakeLists.txt  main.cc
utility/: format
(+204 files in other folders)
